Changelog for tagLister.

tagLister 1.0.0
===============
- Initial commit.